tests/cases/ok/floats.p4
def scale(x: float, factor: int) -> float:
    return x * factor

def main() -> None:
    print(scale(2.3, 4))
