tests/cases/fail/private_field_access.p4
class Counter:
    __value: int

def main() -> None:
    c: Counter = Counter(4)
    print(c.__value)
